# h5addiff

./: .gitignore  README.md  pyproject.toml
src/h5addiff/: __init__.py  cli.py  compare.py  report.py
tests/: __init__.py  test_compare.py
