[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h5addiff"
version = "0.1.0"
description = "A simple tool to determine and summarise the difference between two h5ad files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "h5addiff contributors" }
]
keywords = ["h5ad", "anndata", "single-cell", "diff", "comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.10.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
h5addiff = "h5addiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/h5addiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
